# osm-poi-cloud

./: .gitignore  GEMINI.md  Makefile  README.md  WORKFLOW.md  build-and-push.sh  generate-tiles.sh  monitor.sh  pipeline_cli.py  pyproject.toml  run-all-states.sh  setup-athena-api.sh  setup-aws.sh  setup-tiles.sh
_deprecated/: pipeline_cli.py  setup-athena-api.sh  setup-aws.sh  setup-tiles.sh
_deprecated/infra/cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
_deprecated/scripts/: __init__.py  run_pipeline.py
athena/: create_table.sql  lambda_handler.py
batch/: Dockerfile  process_region.py  processor.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: MapView.tsx  Sidebar.tsx
frontend/src/constants/: poiClasses.ts
frontend/src/mapstyles/: osm-bright-osmusa.json
infra/: README.md
infra/cdk/: cdk.json
infra/cdk/lib/: infrastructure-stack.ts  pipeline-stack.ts
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  batch.py  cloudfront.py  config.py  ecr.py  iam.py  images.py  main.py  mypy.ini  pyproject.toml  requirements.txt  s3.py  statemachine.json  vpc.py
pulumi/lambdas/: get_manifest.py
scripts/: common.sh  run_pipeline.py
sharding/: Cargo.toml  Dockerfile  entrypoint.sh
sharding/src/: main.rs
stack/batch/: .env.local  Dockerfile  common.py  download.py  merge.py  mise.toml  process.py  processor.py  pyproject.toml  requirements.txt
stack/sharding/: Dockerfile  entrypoint.sh
stack/sharding/src/: main.rs
stack/tiles/: Dockerfile  generate_pmtiles.py
tiles/: requirements.txt
