[project]
name = "osm-h3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.5",
    "botocore[crt]>=1.42.5",
    "click>=8.1.7",
    "pyarrow>=22.0.0",
    "spatialite>=0.0.3",
]

[tool.uv.workspace]
members = [
    "pulumi",
]
