[project]
name = "osm-h3-pulumi"
version = "0.1.0"
description = "Pulumi infrastructure for OSM H3 processing"
authors = ["Martijn van Exel <mvexel@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "duckdb>=1.4.3",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
    "pulumi-docker>=4.0.0,<5.0.0",
    "setuptools>=70.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "boto3-stubs[s3]>=1.35.0",
]
