[package]
name = "osm-planet-sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
h3o = "0.9"
hashbrown = "0.15"
osmpbf = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
h3o = "0.9"
