[package]
name = "osm-planet-sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-s3 = "1.65"
clap = { version = "4.5", features = ["derive", "env"] }
h3o = "0.9"
hashbrown = "0.15"
osmpbf = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
h3o = "0.9"
